# opengl-demo

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  glstart
include/: base.h  base_app.h  base_shader.h  base_util.h  debug.h
include/3d/: camera.h  material.h  model.h  object.h  type_common.h
include/animator/: anim.h
include/text/: text.h
src/base/: base_app.cpp  base_shader.cpp  base_util.cpp  gl3w.c
src/base/3d/: camera.cpp
src/base/text/: text.cpp
src/basic/: basic.cpp
src/cube_map/: cube_map.cpp
src/env_map/: env_map.cpp
src/fps_cam/: fps_cam.cpp
src/geom/: geom.cpp
src/light_basic/: light_basic.cpp
src/light_cast/: light_cast.cpp
src/light_map/: light_map.cpp
src/model/: model.cpp
src/model_exp/: model_exp.cpp
src/planet/: planet.cpp
src/rect/: rect.cpp
src/rect_rot/: rect_rot.cpp
src/shadow_map/: shadow_map.cpp
src/shadow_map_pl/: shadow_map_pl.cpp
src/triag/: triag.cpp
